# SPLATman

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  main_pipeline.py  mkdocs.yml  modules_available.txt  plan.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg
.github/workflows/: ci.yml
configs/: pipeline_config.yaml
docs/: index.md
scripts/: download_models.sh
src/gaussian_pipeline/: gaussian_optimizer.py
src/preprocessing/: camera_estimator.py  human_segmenter.py  keypoint_detector.py
src/smplx_fitting/: pixie_initializer.py  smplx_refiner.py
src/utils/: __init__.py  data_utils.py  torch_utils.py
tests/: conftest.py  test_data_utils.py  test_imports.py
