[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "3d-recon"
version = "0.1.0"
description = "3D Body Reconstruction Pipeline"
authors = [{name = "Your Name", email = "you@example.com"}]
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
3d-recon = "main_pipeline:cli_entry"
