[metadata]
name = 3d-recon
version = 0.1.0
description = 3D Body Reconstruction Pipeline
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pyyaml
    numpy
    opencv-python
    pillow
    smplx
    pytorch3d
    torchmetrics
    lpips
    pycolmap
    mmcv-full
    mmpose
    detectron2
    gsplat
python_requires = >=3.9

[options.entry_points]
console_scripts =
    3d-recon = main_pipeline:cli_entry
