[metadata]
# Project metadata (name, version, description, etc.) is primarily defined in pyproject.toml
# and will be used by setuptools.
# You can add specific metadata here if needed for older tools or specific cases,
# but it's generally better to keep it consolidated in pyproject.toml.

[options]
# Defines where setuptools should look for packages.
# This configuration assumes your Python packages are located under an 'src' directory.
package_dir =
    = src

# find: automatically discovers packages in the directory specified by package_dir (i.e., 'src').
# Alternatively, you can explicitly list packages:
# packages = my_package_1, my_package_2
packages = find:

# python_requires is also defined in pyproject.toml and will take precedence.
# python_requires = >=3.9

# install_requires is also defined in pyproject.toml ([project].dependencies)
# and will take precedence.
# install_requires =
#   package1
#   package2>=1.0

[options.packages.find]
# Specifies the directory (relative to setup.cfg) where to search for packages.
where = src

# [options.entry_points]
# Console scripts and other entry points are defined in pyproject.toml ([project.scripts])
# and will take precedence.
# console_scripts =
#     my-script = my_package.module:function
